--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"webpack-dev-server": "^5.0.4"
 	},
 	"dependencies": {
+		"@svgr/webpack": "^8.1.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"styled-components": "^6.1.11"
