--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,16 @@
 {
-    "compilerOptions": {
-        "target": "es5",
-        "module": "esnext",
-        "moduleResolution": "node",
-        "esModuleInterop": true,
-        "strict": true,
-        "noImplicitAny": true,
-        "jsx": "react-jsx",
-        "allowJs": true,
-        "skipLibCheck": true
-    },
-    "files": [
-      "src/index.tsx"
-    ]
+  "compilerOptions": {
+    "target": "es5",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "strict": true,
+    "noImplicitAny": true,
+    "jsx": "react-jsx",
+    "allowJs": false,
+    "skipLibCheck": true
+  },
+  "files": [
+    "./src/index.tsx"
+  ],
 }
