feat(ui): add mainPage layout, before API/redux integration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "allowJs": false,
     "skipLibCheck": true
   },
-  "files": [
-    "./src/index.tsx"
-  ],
+  "include": [
+    "./src/**/*.tsx"
+  ]
 }
