--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
 	},
 	"dependencies": {
 		"@svgr/webpack": "^8.1.0",
+		"formik": "^2.4.6",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-redux": "^9.1.2",
 		"redux": "^5.0.1",
-		"styled-components": "^6.1.11"
+		"styled-components": "^6.1.11",
+		"yup": "^1.4.0"
 	},
 	"lint-staged": {
 		"*.js": "eslint --cache --fix",
