--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-redux": "^9.1.2",
+		"react-router-dom": "^6.23.1",
 		"redux": "^5.0.1",
 		"styled-components": "^6.1.11",
 		"yup": "^1.4.0"
