refactor: add ts to all files, remove ts-ignore, prepare for remove any

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,9 @@
     "noImplicitAny": true,
     "jsx": "react-jsx",
     "allowJs": false,
-    "skipLibCheck": true
+    "skipLibCheck": true,
   },
   "include": [
-    "./src/**/*.tsx"
-  ]
+    "./src/**/*.tsx",
+  ],
 }
