--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@eslint/create-config": "^1.1.0",
 		"@testing-library/jest-dom": "^6.4.5",
 		"@testing-library/react": "^15.0.7",
+		"babel-jest": "^29.7.0",
 		"babel-loader": "^9.1.3",
 		"eslint": "^9.2.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -35,6 +36,7 @@
 		"jest-environment-jsdom": "^29.7.0",
 		"lint-staged": "^15.2.2",
 		"prettier": "3.2.5",
+		"ts-jest": "^29.1.3",
 		"typescript": "^5.0.4",
 		"webpack": "^5.91.0",
 		"webpack-cli": "^5.1.4",
